--- a/genindex.html
+++ b/genindex.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#"><link rel="search" title="Search" href="search.html">
 
-    <!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 --><title>Index - Project Kraken 0.4.0 documentation</title>
+    <!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 --><title>Index - Project Kraken 0.5.0 documentation</title>
 <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=d111a655" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=580074bf" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=8dab3a3b" />
@@ -165,7 +165,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">Project Kraken 0.4.0 documentation</div></a>
+      <a href="index.html"><div class="brand">Project Kraken 0.5.0 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -186,7 +186,7 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
-  <span class="sidebar-brand-text">Project Kraken 0.4.0 documentation</span>
+  <span class="sidebar-brand-text">Project Kraken 0.5.0 documentation</span>
   
 </a><form class="sidebar-search-container" method="get" action="search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -605,6 +605,8 @@
         <li><a href="core.html#core.entities.Entity">Entity (class in core.entities)</a>
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.entity_details_loaded">entity_details_loaded (services.worker.DatabaseWorker attribute)</a>
+</li>
+        <li><a href="services.html#services.worker.DatabaseWorker.entity_state_resolved">entity_state_resolved (services.worker.DatabaseWorker attribute)</a>
 </li>
         <li><a href="core.html#core.calendar.CalendarConfig.epoch_name">epoch_name (core.calendar.CalendarConfig attribute)</a>, <a href="core.html#id1">[1]</a>
 </li>
@@ -1084,6 +1086,8 @@
 </li>
         <li><a href="services.html#services.link_resolver.LinkResolver.resolve">resolve() (services.link_resolver.LinkResolver method)</a>
 </li>
+        <li><a href="services.html#services.worker.DatabaseWorker.resolve_entity_state">resolve_entity_state() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="services.html#services.worker.DatabaseWorker.run_command">run_command() (services.worker.DatabaseWorker method)</a>
 </li>
     </ul></td>
@@ -1350,7 +1354,7 @@
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=1437fa6d"></script>
+</div><script src="_static/documentation_options.js?v=70f82a29"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=46bd48cc"></script>
